marlin simulation speed improvements